# unilab

./: .gitignore  .gitmodules  Readme  Readme.md  univermake.geany  university.geany
01/Programming_Lab02/: 01.c  02.c  Readme.md
01/Programming_Lab03/: Readme.md
01/Programming_Lab04/: Readme.md
02/: Readme.md
02/AaDS_Lab1/: Readme.md  main.cpp
02/AaDS_Lab2/: Readme.md  main.c
02/AaDS_Lab3/: Readme.md  Statistics_AaDS_Lab3.csv  Statistics_AaDS_Lab3_.csv  dst.txt  main.c
02/AaSoCS_Lab1/: 01.csv  02.c  05.csv  06.c  07.c  big_collector.sh
02/AaSoCS_Lab2/: 2.csv
02/Practice_Amcbridge/: Character.cpp  Subsequence.cpp
02/Programming_Lab05/: main.c
02/Programming_Lab06/: main.c
02/Programming_Lab07/: CMakeLists.txt  functions.c  input.txt  main.c
02/Programming_Lab08/: main.cpp  statistics.ods
03/: Readme.md
03/CG_Lab1/: CMakeLists.txt  classes.cpp  classes.h
03/NM_Lab1/: CMakeLists.txt
03/ProgrammingII_Lab01/: functions.h
03/ProgrammingII_Lab02/: CMakeLists.txt  Readme.md
04/: Readme.md
04/DaIS_Lab1/: .htaccess
04/DaIS_Lab3/: .htaccess  config.php.example  delete.php  edit.php  header.php
04/ProgrammingII_Lab03/: CMakeLists.txt  Readme.md
04/ProgrammingII_Lab04/: CMakeLists.txt  Readme.md
05/MOI_Lab1/: Readme.md  input.txt
05/MOI_Lab2/: MOI_Lab2_Report.tex  lab2.txt
06/MO_Lab2/: MO_Lab2_Report.tex  main.py
06/MO_Lab3/: MO_Lab3_Report.tex  main.py
06/Unix_Lab1/: 17_1.html
06/Unix_Lab2/: 17_2.html  Readme.md  lab2.sh
06/Unix_Lab3/: 17_3.html  PA-17-2.txt  Readme.md  lab3.sh
06/Unix_Lab4/: 17_4.html  Readme.md  lab4.sh  out.txt
06/Unix_Lab5/: .gitignore  17_5.html  Makefile  Readme.md  main.c  sumy.c  sumy.h
06/Unix_Lab6/: 1.c  17_6.html  2.c  3.c  Readme.md
06/Unix_Lab7/: 17_7.html  Readme.md  child.c  parent.c
06/Web_Lab4/: 17_4.html
06/ZI_Lab2/: Readme.md  caesar.py  vigener.py
06/ZI_Lab3/: .gitignore  Lab3.geany  Makefile  Readme.md  aes.c  aes.h  aese.py  main.c
06/ZI_Lab4/: Lab4.geany  Readme.md  main.py
06/ZI_Lab5/: Lab5.geany  Readme.md  main.py
07/: Readme.md
07/DSS_Lab1/: Readme.md
07/PaDC_Lab1/: CMakeLists.txt  Readme.md  common.c  common.h  generator.c  main_openmp.c  main_simple.c  statistics.csv
07/PaDC_Lab2/: CMakeLists.txt  Readme.md  hello_world.c
07/PaDC_Lab3/: CMakeLists.txt  Readme.md  main.c
07/PaDC_Lab4/: Readme.md  main.c
07/PaDC_Lab5/: CMakeLists.txt  Readme.md  matvec.c  vecmat.c
07/PaDC_Lab6/: CMakeLists.txt  Readme.md  main.c
08/: Readme.md
08/DSfMP/: DSfMP.pro  DSfMP_uk_UA.ts  Doxyfile  HomeForm.ui.qml  Linux.qml  LinuxForm.ui.qml  LinuxView.qml  Page2Form.ui.qml  PixyWorld.ui.qml  linux.cpp  linux.h  linuxmodel.cpp  linuxmodel.h  main.cpp  main.qml  mainpage.dox  qml.qrc  qmltranslator.cpp  qmltranslator.h  qtquickcontrols2.conf
08/EoCD_Lab1/: 3d.py  Readme.md  (+1 more)
08/IaMP_Lab2/: CMakeLists.txt  Doxyfile  app.cpp  app.h  common.h  doxygen.ini  image.cpp  image.h  imagedata.cpp  imagedata.h  main.cpp  mainpage.dox  processor.cpp  processor.h
08/IaMP_Lab2/gui/: app.cpp  app.h  texture.cpp  texture.h
10/: ItSaCM_Labs  Readme.md
111/: Лабораторная работа 1.doc
112/: Звіт 2.docx  Звіт 2.odt  Лабораторная работа 2.doc
113/: main.c  Звіт 3.docx  Звіт 3.odt  Лабораторная робота 3.doc
114/: input.txt  main.cpp  output.txt  Звіт 4.docx  Звіт 4.odt  Лабораторная робота 4.doc
121/: Звіт.docx  Звіт.odt
122/: Звіт.docx  Звіт.odt
123/: 123.geany  Makefile  functions.h  ru_task.txt  Звіт.docx  Звіт.odt
124/: main.c  statistics.csv  Звіт.docx  Звіт.odt
131/: Makefile  Readme.md  args.cpp  args.h  functions.c  functions.h  main.c  main.cpp
132/: .gitignore  CMakeLists.txt  Makefile  Makefile.am  Readme.md  configure.ac  main.cpp  superint.cpp  superint.h  tests.cpp  tests.h
132/libsuperint/: Makefile.am  superint.cpp  superint.h
132/src/: Makefile.am  main.cpp  run_tests.cpp  tests.cpp  tests.h
14/: Readme.md
143/: CMakeLists.txt  My.cbp  MyApp.cpp  MyApp.h  MyFrame.cpp  MyFrame.h  MyMain.cpp  MyMain.h  Readme.md  ShapeChilds.cpp  ShapeChilds.h  Shapes.cpp  Shapes.h  ShapesChilds.cpp  ShapesChilds.h  libgaura.h  wx_pch.h
143/resources/: main.ui
143/src/: aggregator.cpp  aggregator.h  graphics.cpp  graphics.h  libgaura.cpp  libgaura.h  main.cpp  shape-childs.cpp  shape-childs.h  shape-parameters.cpp  shape-parameters.h  shapes.cpp  shapes.h  window.cpp  window.h
143/wxsmith/: My.cbp  MyFrame.wxs  Myframe.wxs
144/: Readme.md
221/: 01.c  02.csv  03.c  03.csv  04.c  04.csv  05.c  06.csv  07.csv  08.c  08.csv  09.c  09.csv  Statistics.ods  collector.sh  Звіт.docx  Звіт.odt
222/: 1.csv  main.c  output.txt  statistics.ods  Звіт.docx  Звіт.odt
321/: main.cpp  Звіт.docx  Звіт.odt
322/: data.txt  datagen.c  Звіт.docx  Звіт.odt
323/: src.txt  statistics.ods  Звіт.docx  Звіт.odt
324/: main.c  Звіт.docx  Звіт.odt
431/: 431.cbp  431.depend  431.geany  431.layout  CMakeLists.txt  Makefile  Makefile.am  Readme.md  classes.cpp  classes.h  configure.ac  main.cpp  tclasses.h  tclasses.tpp
432/: .gitignore  CMakeLists.txt  configure.ac
432/resources/: Cube.bo
432/src/: 432.cbp  E.mtl  Makefile.am  P.mtl  camera.h  lighting.fs  lightless.vs  main.cpp  main_G.cpp  mesh.h  model.h  shader.h
432/src/old/: lighting.fs  lighting.vs
531/: CMakeLists.txt  configure.ac  main.geany
531/src/: Makefile.am  derivedwindow.cc  derivedwindow.h  main.cc  main.ui  model.cc  model.h
541/: CMakeLists.txt
542/: CMakeLists.txt
542/resources/: main.ui
542/src/: main.cpp  math.cpp  math.h  matrix.cpp  matrix.h  model.cpp  model.h  treemodel.cpp  treemodel.h  window.cpp
543/: CMakeLists.txt
622/: Звіт.odt  Лаб3_ПА-17-1_Панасенко.odt  Лаб4_ПА-17-1_Панасенко.docx  Лаб5_ПА-17-1_Панасенко.docx  Лаб7_ПА-17-1_Панасенко.ods  Лаб7_ПА-17-1_Панасенко.xlsx  Лаб8_ПА-17-1_Панасенко.xlsx  Щоденник.odt
741/: .htaccess
743/: edit.php  header.php  index.php  list.php
922/: Звіт.docx  Лаб1_ПА-17-1_Панасенко.docx  Лаб2_ПА-17-1_Панасенко.docx  Лаб3_ПА-17-1_Панасенко.docx  Лаб8_ПА-17-1_Панасенко.ods  Лаб9_ПА-17-1_Панасенко.ods  Лаб9_ПА-17-1_Панасенко.xlsx  Щоденник.txt
(+218 files in other folders)
